Raven module, service, connectionString, dlls

--- a/src/Wikibird/Web.config
+++ b/src/Wikibird/Web.config
@@ -9,7 +9,9 @@
     <add key="ClientValidationEnabled" value="true"/> 
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/> 
   </appSettings>
-    
+  <connectionStrings>
+      <add name="RavenDbConnectionString" connectionString="url=http://localhost:8080"/>      
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
