--- a/src/Wikibird/Wikibird.csproj
+++ b/src/Wikibird/Wikibird.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\PageTitle.cs" />
     <Compile Include="Models\Page.cs" />
     <Compile Include="Models\PageViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
