--- a/src/Wikibird/Wikibird.csproj
+++ b/src/Wikibird/Wikibird.csproj
@@ -77,6 +77,7 @@
 	<Compile Include="Controllers\PageController.cs" />
     <Compile Include="Core\Abstractions\IPageService.cs" />
     <Compile Include="Core\Implementations\InMemoryPageService.cs" />
+    <Compile Include="Core\Implementations\PageIdGenerator.cs" />
     <Compile Include="Core\Implementations\RavenPageService.cs" />
     <Compile Include="Extensions\TemplateExtensions.cs" />
     <Compile Include="Global.asax.cs">
