--- a/src/Wikibird/Wikibird.csproj
+++ b/src/Wikibird/Wikibird.csproj
@@ -74,8 +74,10 @@
   <ItemGroup>
     <Compile Include="AutofacModules\InMemoryCoreModule.cs" />
     <Compile Include="AutofacModules\RavenDbCoreModule.cs" />
-	<Compile Include="Controllers\PageController.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
+    <Compile Include="Controllers\PageController.cs" />
     <Compile Include="Core\Abstractions\IPageService.cs" />
+    <Compile Include="Core\Implementations\DocumentStoreFactory.cs" />
     <Compile Include="Core\Implementations\InMemoryPageService.cs" />
     <Compile Include="Core\Implementations\PageIdGenerator.cs" />
     <Compile Include="Core\Implementations\RavenPageService.cs" />
@@ -83,6 +85,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CategoryViewModel.cs" />
     <Compile Include="Models\PageTitle.cs" />
     <Compile Include="Models\Page.cs" />
     <Compile Include="Models\PageViewModel.cs" />
@@ -148,6 +151,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\PageList.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Category\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
