--- a/src/Wikibird/Wikibird.csproj
+++ b/src/Wikibird/Wikibird.csproj
@@ -76,6 +76,7 @@
     <Compile Include="AutofacModules\RavenDbCoreModule.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\PageController.cs" />
+    <Compile Include="Controllers\TagController.cs" />
     <Compile Include="Core\Abstractions\IPageService.cs" />
     <Compile Include="Core\Implementations\DocumentStoreFactory.cs" />
     <Compile Include="Core\Implementations\InMemoryPageService.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="Models\PageTitle.cs" />
     <Compile Include="Models\Page.cs" />
     <Compile Include="Models\PageViewModel.cs" />
+    <Compile Include="Models\TagViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -154,6 +156,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Category\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Tag\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
