--- a/lib/RavenDB/Server/Raven.Server.exe.config
+++ b/lib/RavenDB/Server/Raven.Server.exe.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="Raven/Port" value="8080"/>
-    <add key="Raven/DataDir" value="~\Data"/>
+    <add key="Raven/DataDir" value="D:\temp\RavenData"/>
     <add key="Raven/AnonymousAccess" value="Get"/>
   </appSettings>
 	<runtime>
