--- a/lib/RavenDB/Server/Raven.Server.exe.config
+++ b/lib/RavenDB/Server/Raven.Server.exe.config
@@ -3,7 +3,7 @@
   <appSettings>
     <add key="Raven/Port" value="8080"/>
     <add key="Raven/DataDir" value="D:\temp\RavenData"/>
-    <add key="Raven/AnonymousAccess" value="Get"/>
+    <add key="Raven/AnonymousAccess" value="All"/>
   </appSettings>
 	<runtime>
 		<loadFromRemoteSources enabled="true"/>
